Update radar-box label from 'LOCAL CCT' to 'RUFF EAST CCT'

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </header>
 
     <div class="main-view">
-        <div class="radar-box local"><div class="label">LOCAL CCT</div><div id="map-local"></div></div>
+        <div class="radar-box local"><div class="label">RUFF EAST CCT</div><div id="map-local"></div></div>
         <div class="radar-box wide"><div class="label" id="label-range">50NM AREA | MAX 3000FT</div><div id="map-wide"></div></div>
         <div class="status-panel">
             <table>
