--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Rufforth East Virtual Radar</title>
+    <title>Rufforth East Glass Cockpit</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <style>
@@ -19,12 +19,14 @@
             --sidebar-bg: #15191f;
         }
 
+        /* 1. FIX: Use 100dvh for mobile browsers to account for address bars */
         body, html { 
             margin: 0; padding: 0; background: var(--bg-dark); color: #e0e0e0; 
-            font-family: 'Segoe UI', sans-serif; height: 100vh; width: 100vw; overflow: hidden;
+            font-family: 'Segoe UI', sans-serif; 
+            height: 100%; height: 100dvh; width: 100vw; overflow: hidden;
         }
 
-        .dashboard { display: flex; flex-direction: column; height: 100%; transition: margin-right 0.3s; }
+        .dashboard { display: flex; flex-direction: column; height: 100%; width: 100%; transition: margin-right 0.3s; }
 
         /* Rotate Overlay for Portrait Mode */
         #rotate-msg {
@@ -45,7 +47,7 @@
         header { 
             height: 45px; background: #111; border-bottom: 2px solid #333; 
             display: flex; justify-content: space-between; align-items: center; padding: 0 15px;
-            flex-shrink: 0;
+            flex-shrink: 0; /* Never shrink the header */
         }
 
         .controls-container { display: flex; gap: 15px; align-items: center; }
@@ -126,7 +128,16 @@
         .btn-save:hover { background: #445; }
         .btn-save:active { transform: scale(0.98); }
 
-        .main-view { display: flex; flex: 1; gap: 5px; padding: 5px; overflow: hidden; height: 100%; }
+        /* 2. FIX: Main View Flex settings */
+        .main-view { 
+            display: flex; 
+            flex: 1 1 auto; /* Allow grow and shrink */
+            min-height: 0; /* Critical: allows flex item to shrink below content size */
+            gap: 5px; 
+            padding: 5px; 
+            overflow: hidden; 
+            width: 100%;
+        }
 
         .leaflet-tile-pane { transition: opacity 0.1s linear; }
 
@@ -154,7 +165,7 @@
         footer { 
             height: 50px; background: #000; border-top: 2px solid var(--airbus-cyan); 
             display: grid; grid-template-columns: repeat(8, 1fr); align-items: center; 
-            flex-shrink: 0;
+            flex-shrink: 0; /* 3. FIX: Ensure footer never shrinks */
         }
 
         .met-item { 
